<resources>
    <!--    <string name="app_name">PrivateGemini</string>-->
    <string name="baking_title">What can we bake today?</string>
    <string name="prompt_placeholder">Enter your prompt here</string>
    <string name="results_placeholder">Results will appear here</string>
    <string name="label_prompt">Prompt</string>
    <string name="action_go">Go</string>
    <string name="image1_description">A delicious looking cupcake</string>
    <string name="image2_description">A plate of freshly baked cookies</string>
    <string name="image3_description">A beautiful birthday cake</string>


    <string name="app_name">GeminiViews</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_transform">Transform</string>
    <string name="menu_reflow">Reflow</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_settings">Settings</string>

    <string name="lorem_ipsum_title">Lorem Ipsum"</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply placeholder text of the printing and
        typesetting industry. Lorem Ipsum has been the industry\'s standard placeholder text ever
        since the 1500s, when an unknown printer took a galley of type and scrambled it to make a
        type specimen book"
    </string>
    <string name="fab_content_description">Represents a view to invoke an action</string>
    <string name="image_view_item_transform_content_description">Represents an image view in the
        item
    </string>


    <string name="action_send">Send</string>
    <string name="welcome_message">Hello! How can I help you today?</string>
    <string name="sender_you">you</string>
    <string name="sender_gemini">Gemini</string>


    <string name="send_button_send_text">发送</string>
    <string name="send_button_stop_text">停止</string>
</resources>